--- a/client/index.html
+++ b/client/index.html
@@ -56,7 +56,7 @@
                     <router-link id="home" to='/'><img class="logo" src="img/logo.jpg"></router-link>
                     <router-link to='/tshirts'>Tshirts</router-link>
                     <router-link to='/createurs'>Créateurs</router-link>
-                    <img class="logo_profil" src="img/profil.png">
+                    <img class="logo_profil" src="./img/profil.png">
                     <router-link to='/log_in'>Se connecter</router-link>
                     <router-link to='/sign_up'>S'enregistrer</router-link>
                     <img class="logo left" src="img/logo.jpg">
