--- a/client/index.html
+++ b/client/index.html
@@ -59,7 +59,6 @@
                     <img class="logo_profil" src="./img/profil.png">
                     <router-link to='/log_in'>Se connecter</router-link>
                     <router-link to='/sign_up'>S'enregistrer</router-link>
-                    <img class="logo left" src="img/logo.jpg">
                 </nav>
             </header>
             <main>
@@ -72,7 +71,7 @@
             const Tshirts = window.httpVueLoader('./components/Tshirts.vue')
             const UnTshirt = window.httpVueLoader('./components/UnTShirt.vue')
             const Sign_up = window.httpVueLoader('./components/Sign_up.vue')
-            const Log_in = window.httpVueLoader('.components/Log_in.vue')
+            const Log_in = window.httpVueLoader('./components/Log_in.vue')
 
             const routes = [
                 { path: '/', component: Acceuil },
