--- a/client/index.html
+++ b/client/index.html
@@ -72,7 +72,7 @@
             const Tshirts = window.httpVueLoader('./components/Tshirts.vue')
             const UnTshirt = window.httpVueLoader('./components/UnTShirt.vue')
             const Sign_up = window.httpVueLoader('./components/Sign_up.vue')
-            const Log_in = window.httpVueLoader('.components/Log_in.vue')
+            const Log_in = window.httpVueLoader('./components/Log_in.vue')
 
             const routes = [
                 { path: '/', component: Acceuil },
