--- a/client/index.html
+++ b/client/index.html
@@ -75,6 +75,7 @@
             const UnTshirt = window.httpVueLoader('./components/UnTShirt.vue')
             const Sign_up = window.httpVueLoader('./components/Sign_up.vue')
             const Vente = window.httpVueLoader('./components/Vente.vue')
+            const Log_in = window.httpVueLoader('./components/Log_in.vue')
 
             const routes = [
                 { path: '/', component: Acceuil },
