--- a/client/index.html
+++ b/client/index.html
@@ -101,8 +101,17 @@
                     isConnected: false
                 },
                 async mounted () {
-                    /*const res = await axios.get('/api/articles')
-                    this.articles = res.data*/
+                    try {
+                        const res = await axios.get('/api/me')
+                        this.user = res.data
+                        this.isConnected = true
+                    } catch (err) {
+                        if (err.response?.status === 401) {
+                            this.isConnected = false
+                        } else {
+                            console.log('error', err)
+                        }
+                    }
                 },
                 methods: {
                     async login (user) {
